@@ -1805,10 +1805,10 @@
  
      <li>
        <dl>
-         <dt xml:lang="en">source</dt>
-         <dd>sorgenti</dd>
+         <dt xml:lang="en">source code</dt>
+         <dd>codice sorgente, sorgenti</dd>
        </dl>
-       <p class="notes">Genere maschile.</p>
+       <p class="notes">Il termine "sorgenti" va usato con genere maschile.</p>
      </li>
  
      <li>
