@@ -1,6 +1,8 @@
 2005-08-22  Emanuele Aina <emanuele.aina@gmail.com>
 
 	* glossario.html: posta la traduzione di "minimize, to" all'infinito
+	* glossario.html: cambiato "source" in "source code" per essere più chiaro
+	e aggiunto per la traduzione "codice sorgente" migliorando la spiegazione
 
 2005-07-20  Emanuele Aina <emanuele.aina@tiscali.it>
 
